--- a/storage-persistence/src/main/resources/db.properties
+++ b/storage-persistence/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost/storage
+db.url=jdbc:postgresql://localhost/storage?charSet=utf-8
 db.user=admin
 db.password=admin
 db.pool.size.max=10
