--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,12 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
-		<spring.webmvc.version>5.3.13</spring.webmvc.version>
-		<spring.orm.version>5.3.13</spring.orm.version>
+		<spring.version>5.3.13</spring.version>
+		<spring.security.version>5.6.0</spring.security.version>
 		<spring.data.version>2.6.0</spring.data.version>
 		<hibernate.core.version>5.6.1.Final</hibernate.core.version>
+		<hibernate.validator.version>6.2.1.Final</hibernate.validator.version>
+		<javax.validation.version>2.0.1.Final</javax.validation.version>
 		<hikaricp.version>5.0.0</hikaricp.version>
 		<postgresql.connector.version>42.3.1</postgresql.connector.version>
 		<jackson.version>2.13.0</jackson.version>
@@ -37,8 +39,8 @@
 		<javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
 		<lombok.version>1.18.22</lombok.version>
 		<mapstruct.version>1.4.2.Final</mapstruct.version>
-		<slf4j-api.version>1.7.32</slf4j-api.version>
-		<logback.version>1.2.6</logback.version>
+		<slf4j-api.version>1.7.35</slf4j-api.version>
+		<logback.version>1.2.10</logback.version>
 		<mockito.junit.jupiter.version>4.0.0</mockito.junit.jupiter.version>
 		<liquibase.maven.plugin.version>4.5.0</liquibase.maven.plugin.version>
 		<maven.surfire.plugin.version>3.0.0-M5</maven.surfire.plugin.version>
@@ -65,12 +67,12 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-webmvc</artifactId>
-				<version>${spring.webmvc.version}</version>
+				<version>${spring.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-orm</artifactId>
-				<version>${spring.orm.version}</version>
+				<version>${spring.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.data</groupId>
@@ -78,9 +80,29 @@
 				<version>${spring.data.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${spring.security.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${spring.security.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
 				<version>${hibernate.core.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate.validator</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>${hibernate.validator.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>${javax.validation.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.zaxxer</groupId>
