Added token_authentication mechanism using POST method on /login url with json-parameters username and password. Then token should be inserted in Authorization header. Added authorization and users controllers.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.7"
 
 services:
-  db-school:
-    image: postgres:14.1
+  db-storage:
+    image: postgres:14.5
     restart: always
     ports:
       - 5432:5432
