--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,13 @@
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 		<spring.version>5.3.13</spring.version>
 		<spring.security.version>5.6.0</spring.security.version>
+		<jwt.version>3.19.2</jwt.version>
 		<spring.data.version>2.6.0</spring.data.version>
-		<hibernate.core.version>5.6.1.Final</hibernate.core.version>
+		<hibernate.core.version>5.6.10.Final</hibernate.core.version>
 		<hibernate.validator.version>6.2.1.Final</hibernate.validator.version>
 		<javax.validation.version>2.0.1.Final</javax.validation.version>
 		<hikaricp.version>5.0.0</hikaricp.version>
-		<postgresql.connector.version>42.3.1</postgresql.connector.version>
+		<postgresql.connector.version>42.4.0</postgresql.connector.version>
 		<jackson.version>2.13.0</jackson.version>
 		<javax.servlet.api.version>4.0.1</javax.servlet.api.version>
 		<javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
@@ -42,7 +43,7 @@
 		<slf4j-api.version>1.7.35</slf4j-api.version>
 		<logback.version>1.2.10</logback.version>
 		<mockito.junit.jupiter.version>4.0.0</mockito.junit.jupiter.version>
-		<liquibase.maven.plugin.version>4.5.0</liquibase.maven.plugin.version>
+		<liquibase.maven.plugin.version>4.16.0</liquibase.maven.plugin.version>
 		<maven.surfire.plugin.version>3.0.0-M5</maven.surfire.plugin.version>
 	</properties>
 
@@ -89,6 +90,12 @@
 				<artifactId>spring-security-config</artifactId>
 				<version>${spring.security.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.auth0</groupId>
+				<artifactId>java-jwt</artifactId>
+				<version>${jwt.version}</version>
+			</dependency>
+
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
