--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -43,6 +41,8 @@
 		<slf4j-api.version>1.7.35</slf4j-api.version>
 		<logback.version>1.2.10</logback.version>
 		<mockito.junit.jupiter.version>4.0.0</mockito.junit.jupiter.version>
+		<testcontainers.version>1.17.6</testcontainers.version>
+		<liquibase.version>4.17.2</liquibase.version>
 		<liquibase.maven.plugin.version>4.16.0</liquibase.maven.plugin.version>
 		<maven.surfire.plugin.version>3.0.0-M5</maven.surfire.plugin.version>
 	</properties>
@@ -62,6 +62,11 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>storage-service</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>storage-web</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
@@ -164,6 +169,25 @@
 				<version>${mockito.junit.jupiter.version}</version>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>${spring.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.testcontainers</groupId>
+				<artifactId>postgresql</artifactId>
+				<version>${testcontainers.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.liquibase</groupId>
+				<artifactId>liquibase-core</artifactId>
+				<version>${liquibase.version}</version>
+				<scope>test</scope>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
